--- a/ShiftWise-Backend/src/main/resources/application.properties
+++ b/ShiftWise-Backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ShiftWise-Backend
+
+# Configuración de la base de datos
+spring.datasource.url=jdbc:postgresql://localhost:5432/shiftwise
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Opciones adicionales
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
