--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.agustinamestre</groupId>
-	<artifactId>ShiftWise-Backend</artifactId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ShiftWise-Backend</name>
 	<description>Demo project for Spring Boot</description>
