--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Opciones adicionales
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.schema=data.sql
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format_sql=true
