--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -107,6 +107,20 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!--  H2  -->
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.wiremock</groupId>
+			<artifactId>wiremock-standalone</artifactId>
+			<version>3.6.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
