--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ShiftWise-Backend
 
-# Configuración de la base de datos
+# Configuraciï¿½n de la base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/shiftwise
 spring.datasource.username=postgres
 spring.datasource.password=123456
@@ -17,3 +17,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.datasource.initialization-mode=always
 spring.sql.init.mode=always
 
+# Security configuration JWT
+jwt.secret='[a-zA-Z0-9._]^+$ShitWise1234598765forAlphabeticalArraNumeralsandOtherSymbo$'
