Admin user initializer

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.sql.init.mode=always
 
 # Security configuration JWT
 jwt.secret='[a-zA-Z0-9._]^+$ShitWise1234598765forAlphabeticalArraNumeralsandOtherSymbo$'
+
+admin.nroDocumento=123456789
+admin.password=Admin123##
